[gd_scene load_steps=8 format=3 uid="uid://dikttf6js2th7"]

[ext_resource type="Theme" uid="uid://c4lkfm562pmc7" path="res://resources/themes/StandardTheme.tres" id="1_ynpjn"]
[ext_resource type="Script" uid="uid://cs6f2pva4ervq" path="res://ui/battle_prep_new/item_detailed_info/treasure_detailed_info.gd" id="2_ynpjn"]
[ext_resource type="FontFile" uid="uid://dr2pggbgbnye0" path="res://resources/fonts/m6x11.ttf" id="3_y7or3"]
[ext_resource type="Texture2D" uid="uid://dosv45gdwad0p" path="res://resources/sprites/items/consumables/potion.png" id="4_6fdn2"]

[sub_resource type="Theme" id="Theme_hrc1k"]
default_font = ExtResource("3_y7or3")
default_font_size = 32

[sub_resource type="Theme" id="Theme_6h6tc"]
default_font_size = 16

[sub_resource type="Theme" id="Theme_2lans"]
default_font_size = 12

[node name="TreasureItemDetailedInfo" type="PanelContainer"]
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource("1_ynpjn")
script = ExtResource("2_ynpjn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ItemNameLabel" type="Label" parent="MarginContainer/MainContainer"]
custom_minimum_size = Vector2(228, 60)
layout_mode = 2
theme = SubResource("Theme_hrc1k")
text = "Item Name"
autowrap_mode = 2

[node name="ItemIcon" type="TextureRect" parent="MarginContainer/MainContainer/ItemNameLabel"]
layout_mode = 0
offset_left = 186.0
offset_top = 21.0
offset_right = 234.0
offset_bottom = 69.0
texture = ExtResource("4_6fdn2")
expand_mode = 5
stretch_mode = 4

[node name="ItemWorthLabel" type="Label" parent="MarginContainer/MainContainer/ItemNameLabel/ItemIcon"]
modulate = Color(0.8980392, 0.6901961, 0, 1)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -15.0
offset_right = 27.0
grow_vertical = 0
theme = SubResource("Theme_6h6tc")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "100G"

[node name="ItemTypeContainer" type="HBoxContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2
theme = SubResource("Theme_2lans")

[node name="ItemTypeHeader" type="Label" parent="MarginContainer/MainContainer/ItemTypeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Item Type"

[node name="-" type="Label" parent="MarginContainer/MainContainer/ItemTypeContainer"]
layout_mode = 2
text = "-"

[node name="ItemType" type="Label" parent="MarginContainer/MainContainer/ItemTypeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Treasure"

[node name="ItemDescriptionLabel" type="Label" parent="MarginContainer/MainContainer"]
modulate = Color(0.50980395, 0.50980395, 0.50980395, 1)
custom_minimum_size = Vector2(228, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Description"
autowrap_mode = 3
